--- a/index.html
+++ b/index.html
@@ -9,38 +9,29 @@
   <title>Frontend Mentor | Results summary component</title>
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-  <!-- <script defer src="./scripts/script.js"></script> -->
+  <script defer src="./scripts/script.js"></script>
 </head>
 <body>
-  <main>
+  <main class="main">
     <section class="container">
       <div class="blue-card">
-        <h3>Your Result</h3>
+        <h3 class="blue-card__header">Your Result</h3>
         <div class="blue-card__circle">
           <h1>76</h1>
           <p>of 100</p>
         </div>
-        <h2>Great</h2>
-        <p>You scored higher than 65% of the people who have taken these tests.</p>
+        <h2 class="blue-card__title">Great</h2>
+        <p class="blue-card__text">You scored higher than 65% of the people who have taken these tests.</p>
       </div>
+      <div class="whiteContainer"><section class="frames-grp" id="frames">
+        <!-- Frames will be added here -->
+      </section>
+      <button class="continue-btn" type="button">Continue</button></div>
+      
     </section>
   </main>
+  
 
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
   
   <footer>
     <div class="attribution">
