changed code in javascript

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <div class="whiteContainer"><section class="frames-grp" id="frames">
         <!-- Frames will be added here -->
       </section>
-      <button class="continue-btn" type="button">Continue</button></div>
+      <button class="continue-btn" type="button">Continue</button>
+    </div>
       
     </section>
   </main>
